--- a/VRChat/19/1259919.html
+++ b/VRChat/19/1259919.html
@@ -77,7 +77,7 @@
     <script src=
     "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "13r4EJZ4lmIBfONDxlWy3KAGM4olCv7zBP2Nu2SwCo4="></script>
+    "bbnK8OdUL0KZHPIyfJwsIA1K372lZeAGBVVMW21fXVU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】企業展示会とかでよくある紙袋【Vケット2】","description":"企業の展示会とかでなんかよく配られる紙袋です。\nVケット2出展記念で無料で頒布いたします。\n\n中身は入っていません\nUVとかガバガバですが、シンプルなパターンのテクスチャとかならうまいこと柄変えられるかと思います。\n\n一応ブースト用の有料版もありますが中身は全く変わりません\n\n▼内容物\nkamibukuro.unitypackage\n\nUnityにインポートして利用ください。\n\n▼利用規約など\nVRChat以外での利用も可能です。\n現状では個人クリエイター規模の利用しか想定していないため、\nないとは思いますが、法人など大規模な利用をする場合はお問い合わせください。\n\n当モデルの利用権利は購入者個人に紐付きます。\n商用利用/私的利用　ご自由にお使いください。\nですが、当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n購入者以外が元データを取り出せる形でのアップロードは基本的に禁止です。\n不安な場合はお問い合わせください。良識の範囲内であれば基本大丈夫なはずです。\n\nバーチャル即売会や共同制作に際して、\nデータ取りまとめ作業での受け渡しに限り、特別に再配布を許可します。\n\nなんかで使ったらお声掛けしてくれると嬉しいです特に深い意味はありません","url":"https://booth.pm/ja/items/1259919","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/62c33efe-c472-4462-8a8e-ab57ac471bad/i/1259919/3a743978-175e-4346-b6e9-163ef5d94783_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="13r4EJZ4lmIBfONDxlWy3KAGM4olCv7zBP2Nu2SwCo4="></script>
+    nonce="bbnK8OdUL0KZHPIyfJwsIA1K372lZeAGBVVMW21fXVU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -643,7 +643,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;},{&quot;label&quot;:&quot;ドールズ パーティー49&quot;,&quot;value&quot;:&quot;dollsparty49&quot;},{&quot;label&quot;:&quot;J.GARDEN53&quot;,&quot;value&quot;:&quot;j-garden53&quot;}]"
+    "[{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
